--- a/src/pages/ClassesPage/Classes.module.css
+++ b/src/pages/ClassesPage/Classes.module.css
@@ -8,7 +8,7 @@
 }
 
 .aboveTheFold > .inner {
-  padding: 48px;
+  padding: 60px 48px;
   display: flex;
   flex-direction: column;
   align-items: center;
